feat: criado formulário base do componene novo aluno.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,14 @@
-<header>
+<header class="header">
   <app-cabecalho></app-cabecalho>
 </header>
-<aside>
-  <app-menu></app-menu>
-</aside>
-<main>
-  <router-outlet></router-outlet>
-</main>
-<footer>
+<body class="body">
+  <aside class="aside">
+    <app-menu></app-menu>
+  </aside>
+  <main class="main">
+    <router-outlet></router-outlet>
+  </main>
+</body>
+<footer class="footer">
   <app-rodape></app-rodape>
 </footer>
