--- a/src/app/pages/privado/menu/menu.component.css
+++ b/src/app/pages/privado/menu/menu.component.css
@@ -17,7 +17,8 @@
 }
 
 .icone_contexto {
-  width: 20px;
+  width: 22px;
+  height: 22px;
   margin: auto 25px;
 }
 
@@ -33,6 +34,7 @@
 }
 
 .icone-seta {
-  width: 15px;
+  width: 20px;
+  height: 20px;
   margin-left: 30px;
 }
