--- a/src/app/pages/shared/css_commons/variables.css
+++ b/src/app/pages/shared/css_commons/variables.css
@@ -1,6 +1,8 @@
 :root {
-  --light-gray-95:hsl(0, 0%, 95%);
-  --light-gray-90: hsl(0, 0%, 90%);
 
-  --view-text: var(--gray);
+
+
+
+  /* Buttons */
+  --botao-salvar: var(#28a745);
 }
