--- a/src/app/pages/privado/alunos/novo-aluno/novo-aluno.component.css
+++ b/src/app/pages/privado/alunos/novo-aluno/novo-aluno.component.css
@@ -1,8 +1,29 @@
+.novo_aluno-header {
+  display: flex;
+  justify-content: space-between;
+}
+
+.header-buttons {
+  display: flex;
+  margin-right: 30px;
+}
+
 .container-novo_aluno > h2 {
   display: flex;
   justify-content: center;
   margin: 20px 0;
   padding-bottom: 30px;
+}
+
+app-botao-voltar {
+  margin: 15px 10px 0 0;
+  border-radius: 5px;
+}
+
+app-botao-salvar {
+  margin: 15px 10px 0 0;
+  background: #28a745;
+  border-radius: 5px;
 }
 
 .numeroMatricula,
@@ -17,4 +38,8 @@
   border-radius: 5px;
   background: rgb(230, 230, 230);
   font-weight: bold;
+}
+
+.mat-mdc-raised-button.mat-unthemed {
+
 }
