--- a/src/app/pages/privado/menu/menu.component.html
+++ b/src/app/pages/privado/menu/menu.component.html
@@ -2,7 +2,12 @@
   <div class="container-menu">
     <nav>
       <ul class="lista_menu">
-        <li *ngFor="let item of appMenu.itens" (click)="mudarIconeSeta()">
+        <li
+          class="item_menu"
+          *ngFor="let item of appMenu.itens"
+          (click)="mudarIconeSeta($event)"
+          id="{{ item.id }}"
+        >
           <a routerLink="{{ item.source }}">
             <div class="lista_menu-item">
               <img class="icone_contexto" [src]="item.svgIcon" alt="" />
