--- a/src/styles.css
+++ b/src/styles.css
@@ -14,7 +14,10 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 }
 
 .form-item {
-  margin: 0 10px;
+  /* margin: 0 10px; */
+  margin: 0 10px 5px 10px;
+  display: flex;
+  flex-direction: column;
 }
 
 .input_form {
